# machine_learning_dating_app_project

./: .gitignore  README.md  main.py  pyproject.toml
.virtual_documents/notebooks/: Machine_learning_project_chiara.ipynb  eda_initial_ouhai.ipynb
notebooks/: Machine_learning_project_chiara.ipynb  eda_initial_ouhai.ipynb  feature_engineering.ipynb  feature_engineering_ouhai.ipynb  feature_engineering_veerpal.ipynb  feature_enineering.ipynb  model_development.ipynb
